--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Bellabeat Case Study"
+author: "Leonard Kakinuma"
+date: '`r paste("First created on November 18, 2024. Updated on", Sys.Date())`'
 output:
   html_document:
     theme: united
