standardized date format in YAML header

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Bellabeat Case Study"
 author: "Leonard Kakinuma"
-date: '`r paste("First created on November 18, 2024. Updated on", Sys.Date())`'
+date: '`r paste("First created on November 18, 2024. Updated on", format(Sys.Date(), format = "%B %d, %Y"))`'
 output:
   html_document:
     theme: united
